# obs-screencast-keys

./: .gitignore  README.md
images/: Images.ai  Images.psd
plugin/: BUILDING.md  CMakeLists.txt  README.md
plugin/data/locale/: en-US.ini
plugin/src/: plugin-main.cpp  screencast-keys-source.cpp  screencast-keys-source.h  settings.cpp  settings.h
plugin/src/input/: event-types.cpp  event-types.h  global-input-hook.cpp  global-input-hook.h  input-hook-manager.cpp  input-hook-manager.h  raw-input-event.h
plugin/src/render/: display-list.h  draw-utils.cpp  draw-utils.h  font-resolver.cpp  font-resolver.h  glyph-atlas.cpp  glyph-atlas.h  layout.cpp  layout.h  mouse-icon-images.cpp  mouse-icon-images.h
plugin/src/state/: event-history.cpp  event-history.h  input-state.cpp  input-state.h
plugin/tests/: CMakeLists.txt  event-history-test.cpp  event-types-test.cpp  input-state-test.cpp
screencast_keys/: __init__.py  ops.py  preferences.py  ui.py
screencast_keys/gpu_utils/shaders/: image_color_frag.glsl  image_color_scissor_frag.glsl  uniform_color_scissor_frag.glsl
screencast_keys/utils/: __init__.py
